Fix code indentation on test_yourself.html to help read and correct code

--- a/404.html
+++ b/404.html
@@ -13,12 +13,8 @@
   <!--Link to custom style sheet-->
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
-  <title>Physics Code</title>
-  <meta property="og:url" content="https://pauld0051.github.io/physcis-code/index.html" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Physics Code" />
-  <meta property="og:description" content="A free web resource for Physics students." />
-  <meta property="og:image" content="https://pauld0051.github.io/physcis-code/assets/images/logo-main.png" />
+  <title>Physics Code - Error 404</title>
+  
 </head>
 
 <body>
