--- a/privacy.html
+++ b/privacy.html
@@ -13,7 +13,7 @@
   <!--Link to custom style sheet-->
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
-  <title>Physics Code</title>
+  <title>Physics Code - Privacy</title>
 </head>
 
 <body>
