--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
   <!--Link to custom style sheet-->
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
-  <title>Physics Code</title>
+  <title>Physics Code - Game</title>
 </head>
 
 <body>
