--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!--Link to custom style sheet-->
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
-  <title>Physics Code</title>
+  <title>Physics Code - Home</title>
   <meta property="og:url" content="https://pauld0051.github.io/physcis-code/index.html" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Physics Code" />
