--- a/test_yourself.html
+++ b/test_yourself.html
@@ -13,7 +13,7 @@
   <!--Link to custom style sheet-->
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
-  <title>Physics Code</title>
+  <title>Physics Code - Test Yourself</title>
 </head>
 
 <body>
@@ -57,9 +57,9 @@
         <div class="container heading-background heading-padding heading-margin-top">
           <h1>Test Yourself <i class="fas fa-pencil-ruler"></i></h1>
           <p class="head-text">There are five maps to choose from in this test where you'll need to measure the intersection distance for a given
-            scenario to calculate if a dilemma or option zone exists. You can refer to our help by clicking on the info button<a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> at any time. Or consider using
-            our
-            <a href="index.html" target="_blank"><i class="fas fa-calculator"></i> <span class="underline">calculator</span></a> for best results.</p>
+            scenario to calculate if a dilemma or option zone exists. You can refer to our help by clicking on the info button
+            <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> at any time. Or consider using
+            our <a href="index.html" target="_blank"><i class="fas fa-calculator"></i> <span class="underline">calculator</span></a> for best results.</p>
           <p class="head-text">For instructions on how to measure distances across the intersection using Google Maps choose one of the following:</p>
           <div class="d-flex">
             <ul class="list-group list-group-horizontal mx-auto justify-content-center flex-column flex-md-row background-ul">
@@ -97,8 +97,8 @@
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-1">
             <h5 class="card-title">Scenario One <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
-            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> button. Then use the data provided to
-              establish if a dilemma zone exists under these conditions.</p>
+            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> 
+            button. Then use the data provided to establish if a dilemma zone exists under these conditions.</p>
           </div>
         </div>
       </div>
@@ -110,9 +110,13 @@
             <p>Measure the intersection length from the south east and continuing north west on Leningradsky Ave over Tverskaya Zastava Square.</p>
             <div class="container" id="map_one"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" id="randomScenarioMapOne" data-toggle="modal" data-target="#map-1-scene-1">Random Scenario
-              </button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" data-toggle="modal" data-target="#map-1-scene-1">Current Scenario</button>
+              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
+              id="randomScenarioMapOne" 
+              data-toggle="modal" 
+              data-target="#map-1-scene-1">Random Scenario</button>
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
+              data-toggle="modal" 
+              data-target="#map-1-scene-1">Current Scenario</button>
             </div>
           </div>
         </div>
@@ -136,8 +140,8 @@
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-2">
             <h5 class="card-title">Scenario Two <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
-            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> button. Then use the data provided to
-              establish if a dilemma zone exists under these conditions.</p>
+            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> 
+            button. Then use the data provided to establish if a dilemma zone exists under these conditions.</p>
           </div>
         </div>
       </div>
@@ -149,8 +153,13 @@
             <p>Measure the intersection length heading from the south west continuing north east on Sunnyholt Road over the M7.</p>
             <div class="container" id="map_two"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" id="randomScenarioMapTwo" data-toggle="modal" data-target="#map-2-scene-1">Random Scenario</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" data-toggle="modal" data-target="#map-2-scene-1">Current Scenario</button>
+              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
+              id="randomScenarioMapTwo" 
+              data-toggle="modal" 
+              data-target="#map-2-scene-1">Random Scenario</button>
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
+              data-toggle="modal" 
+              data-target="#map-2-scene-1">Current Scenario</button>
             </div>
           </div>
         </div>
@@ -174,8 +183,8 @@
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-3">
             <h5 class="card-title">Scenario Three <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
-            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> button. Then use the data provided to
-              establish if a dilemma zone exists under these conditions.</p>
+            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> 
+            button. Then use the data provided to establish if a dilemma zone exists under these conditions.</p>
           </div>
         </div>
       </div>
@@ -187,8 +196,13 @@
             <p>Measure the intersection length heading from the south west continuing north east on Lexington Drive over the Harry Byrd Highway.</p>
             <div class="container" id="map_three"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" id="randomScenarioMapThree" data-toggle="modal" data-target="#map-3-scene-1">Random Scenario</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" data-toggle="modal" data-target="#map-3-scene-1">Current Scenario</button>
+              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
+              id="randomScenarioMapThree" 
+              data-toggle="modal" 
+              data-target="#map-3-scene-1">Random Scenario</button>
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
+              data-toggle="modal" 
+              data-target="#map-3-scene-1">Current Scenario</button>
             </div>
           </div>
         </div>
@@ -212,8 +226,8 @@
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-4">
             <h5 class="card-title">Scenario Four <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
-            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> button. Then use the data provided to
-              establish if a dilemma zone exists under these conditions.</p>
+            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> 
+            button. Then use the data provided to establish if a dilemma zone exists under these conditions.</p>
           </div>
         </div>
       </div>
@@ -225,8 +239,13 @@
             <p>Measure the intersection length heading from the east continuing west on Sigmundstraße over Leyher Street.</p>
             <div class="container" id="map_four"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" id="randomScenarioMapFour" data-toggle="modal" data-target="#map-4-scene-1">Random Scenario</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" data-toggle="modal" data-target="#map-4-scene-1">Current Scenario</button>
+              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
+              id="randomScenarioMapFour" 
+              data-toggle="modal" 
+              data-target="#map-4-scene-1">Random Scenario</button>
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
+              data-toggle="modal" 
+              data-target="#map-4-scene-1">Current Scenario</button>
             </div>
           </div>
         </div>
@@ -250,8 +269,8 @@
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-5">
             <h5 class="card-title">Scenario Five <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
-            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> button. Then use the data provided to
-              establish if a dilemma zone exists under these conditions.</p>
+            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> 
+            button. Then use the data provided to establish if a dilemma zone exists under these conditions.</p>
           </div>
         </div>
       </div>
@@ -263,8 +282,13 @@
             <p>Measure the intersection length heading from the south continuing north on Constitutio Hill.</p>
             <div class="container" id="map_five"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" id="randomScenarioMapFive" data-toggle="modal" data-target="#map-5-scene-1">Random Scenario</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" data-toggle="modal" data-target="#map-5-scene-1">Current Scenario</button>
+              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
+              id="randomScenarioMapFive" 
+              data-toggle="modal" 
+              data-target="#map-5-scene-1">Random Scenario</button>
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
+              data-toggle="modal" 
+              data-target="#map-5-scene-1">Current Scenario</button>
             </div>
           </div>
         </div>
@@ -474,8 +498,12 @@
 
     <!-- Copyrightand Facebook Share -->
     <div class="container text-center">
-      <div class="fb-share-button" data-href="https://pauld0051.github.io/physics-code/index.html" data-layout="button" data-size="large">
-        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+      <div class="fb-share-button" 
+      data-href="https://pauld0051.github.io/physics-code/index.html" 
+      data-layout="button" 
+      data-size="large">
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" 
+        class="fb-xfbml-parse-ignore">Share</a></div>
     </div>
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="index.html">Physics Code</a><br>
