--- a/test_yourself.html
+++ b/test_yourself.html
@@ -114,9 +114,11 @@
               id="randomScenarioMapOne" 
               data-toggle="modal" 
               data-target="#map-1-scene-1">Random Scenario</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
+              id="current-map-1" 
               data-toggle="modal" 
-              data-target="#map-1-scene-1">Current Scenario</button>
+              data-target="#map-1-scene-1"
+              disabled>Current Scenario</button>
             </div>
           </div>
         </div>
@@ -157,9 +159,11 @@
               id="randomScenarioMapTwo" 
               data-toggle="modal" 
               data-target="#map-2-scene-1">Random Scenario</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
+              id="current-map-2" 
               data-toggle="modal" 
-              data-target="#map-2-scene-1">Current Scenario</button>
+              data-target="#map-2-scene-1"
+              disabled>Current Scenario</button>
             </div>
           </div>
         </div>
@@ -200,9 +204,11 @@
               id="randomScenarioMapThree" 
               data-toggle="modal" 
               data-target="#map-3-scene-1">Random Scenario</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
+              id="current-map-3" 
               data-toggle="modal" 
-              data-target="#map-3-scene-1">Current Scenario</button>
+              data-target="#map-3-scene-1"
+              disabled>Current Scenario</button>
             </div>
           </div>
         </div>
@@ -243,9 +249,11 @@
               id="randomScenarioMapFour" 
               data-toggle="modal" 
               data-target="#map-4-scene-1">Random Scenario</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
+              id="current-map-4" 
               data-toggle="modal" 
-              data-target="#map-4-scene-1">Current Scenario</button>
+              data-target="#map-4-scene-1"
+              disabled>Current Scenario</button>
             </div>
           </div>
         </div>
@@ -286,9 +294,11 @@
               id="randomScenarioMapFive" 
               data-toggle="modal" 
               data-target="#map-5-scene-1">Random Scenario</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
+              id="current-map-5" 
               data-toggle="modal" 
-              data-target="#map-5-scene-1">Current Scenario</button>
+              data-target="#map-5-scene-1"
+              disabled>Current Scenario</button>
             </div>
           </div>
         </div>
@@ -519,7 +529,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="assets/scripts/maps.js"></script>
-  <script src="assets/scripts/test_yourself2.js"></script>
+  <script src="assets/scripts/test_yourself.js"></script>
   <script src="https://unpkg.com/@google/markerclustererplus@5.1.0/dist/markerclustererplus.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWKHz27Q-E_mW5wHULLj6Wgap3VOjrCbs&callback=initMap"></script>
   <div id="fb-root"></div>
