Fix button padding on test_yourself.html for mobile users

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -97,8 +97,8 @@
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-1">
             <h5 class="card-title">Scenario One <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
-            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> 
-            button. Then use the data provided to establish if a dilemma zone exists under these conditions.</p>
+            <p>Determine the size of the intersection using the Google Map link provided. Then click on the <i class="fas fa-car-battery"></i> scene
+            button and use the data provided to establish if a dilemma zone exists under these conditions.</p>
           </div>
         </div>
       </div>
@@ -110,15 +110,15 @@
             <p>Measure the intersection length from the south east and continuing north west on Leningradsky Ave over Tverskaya Zastava Square.</p>
             <div class="container" id="map_one"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
+              <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" 
               id="randomScenarioMapOne" 
               data-toggle="modal" 
-              data-target="#map-1-scene-1">Random Scenario</button>
+              data-target="#map-1-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
               <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
               id="current-map-1" 
               data-toggle="modal" 
               data-target="#map-1-scene-1"
-              disabled>Current Scenario</button>
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -142,8 +142,8 @@
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-2">
             <h5 class="card-title">Scenario Two <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
-            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> 
-            button. Then use the data provided to establish if a dilemma zone exists under these conditions.</p>
+            <p>Determine the size of the intersection using the Google Map link provided. Then click on the <em>Random Scenario</em> 
+            button and use the data provided to establish if a dilemma zone exists under these conditions.</p>
           </div>
         </div>
       </div>
@@ -155,15 +155,15 @@
             <p>Measure the intersection length heading from the south west continuing north east on Sunnyholt Road over the M7.</p>
             <div class="container" id="map_two"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
+              <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" 
               id="randomScenarioMapTwo" 
               data-toggle="modal" 
-              data-target="#map-2-scene-1">Random Scenario</button>
+              data-target="#map-2-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
               <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
               id="current-map-2" 
               data-toggle="modal" 
               data-target="#map-2-scene-1"
-              disabled>Current Scenario</button>
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -187,8 +187,8 @@
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-3">
             <h5 class="card-title">Scenario Three <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
-            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> 
-            button. Then use the data provided to establish if a dilemma zone exists under these conditions.</p>
+            <p>Determine the size of the intersection using the Google Map link provided. Then click on the <em>Random Scenario</em> 
+            button and use the data provided to establish if a dilemma zone exists under these conditions.</p>
           </div>
         </div>
       </div>
@@ -200,15 +200,15 @@
             <p>Measure the intersection length heading from the south west continuing north east on Lexington Drive over the Harry Byrd Highway.</p>
             <div class="container" id="map_three"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
+              <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" 
               id="randomScenarioMapThree" 
               data-toggle="modal" 
-              data-target="#map-3-scene-1">Random Scenario</button>
+              data-target="#map-3-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
               <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
               id="current-map-3" 
               data-toggle="modal" 
               data-target="#map-3-scene-1"
-              disabled>Current Scenario</button>
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -232,8 +232,8 @@
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-4">
             <h5 class="card-title">Scenario Four <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
-            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> 
-            button. Then use the data provided to establish if a dilemma zone exists under these conditions.</p>
+            <p>Determine the size of the intersection using the Google Map link provided. Then click on the <em>Random Scenario</em> 
+            button and use the data provided to establish if a dilemma zone exists under these conditions.</p>
           </div>
         </div>
       </div>
@@ -245,15 +245,15 @@
             <p>Measure the intersection length heading from the east continuing west on Sigmundstraße over Leyher Street.</p>
             <div class="container" id="map_four"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
+              <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" 
               id="randomScenarioMapFour" 
               data-toggle="modal" 
-              data-target="#map-4-scene-1">Random Scenario</button>
+              data-target="#map-4-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
               <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
               id="current-map-4" 
               data-toggle="modal" 
               data-target="#map-4-scene-1"
-              disabled>Current Scenario</button>
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -277,8 +277,8 @@
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-5">
             <h5 class="card-title">Scenario Five <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
-            <p>Determine the size of the intersection using the Google Map link provided before clicking on the <em>Random Scenario</em> 
-            button. Then use the data provided to establish if a dilemma zone exists under these conditions.</p>
+            <p>Determine the size of the intersection using the Google Map link provided. Then click on the <em>Random Scenario</em> 
+            button and use the data provided to establish if a dilemma zone exists under these conditions.</p>
           </div>
         </div>
       </div>
@@ -290,15 +290,15 @@
             <p>Measure the intersection length heading from the south continuing north on Constitutio Hill.</p>
             <div class="container" id="map_five"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
+              <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" 
               id="randomScenarioMapFive" 
               data-toggle="modal" 
-              data-target="#map-5-scene-1">Random Scenario</button>
+              data-target="#map-5-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
               <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
               id="current-map-5" 
               data-toggle="modal" 
               data-target="#map-5-scene-1"
-              disabled>Current Scenario</button>
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -326,8 +326,8 @@
           <p>The vehicle's tire conditions are described as <strong><span id="map-1-tireCondition"></span></strong></p>
           <p>The weather conditions are described as <strong><span id="map-1-weatherCondition"></span></strong></p>
           <p>The vehicle is <strong><span id="map-1-carLength"></span></strong> m long</p>
-          <p>You can close this pop-up at any time, if you want to get this data back, click the <em>Current Scenario</em> button. Or, if
-            you would like a new scenario, close this pop-up and click <em>Random Scenario</em>.</p>
+          <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i> 
+          <em>Current </em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
           <p>A dilemma zone exists that is... (length)</p>
 
         </div>
@@ -357,8 +357,8 @@
           <p>The vehicle's tire conditions are described as <strong><span id="map-2-tireCondition"></span></strong></p>
           <p>The weather conditions are described as <strong><span id="map-2-weatherCondition"></span></strong></p>
           <p>The vehicle is <strong><span id="map-2-carLength"></span></strong> m long</p>
-          <p>You can close this pop-up at any time, if you want to get this data back, click the <em>Current Scenario</em> button. Or, if
-            you would like a new scenario, close this pop-up and click <em>Random Scenario</em>.</p>
+          <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i> 
+          <em>Current </em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
           <p>A dilemma zone exists that is... (length)</p>
 
         </div>
@@ -388,8 +388,8 @@
           <p>The vehicle's tire conditions are described as <strong><span id="map-3-tireCondition"></span></strong></p>
           <p>The weather conditions are described as <strong><span id="map-3-weatherCondition"></span></strong></p>
           <p>The vehicle is <strong><span id="map-3-carLength"></span></strong> m long</p>
-          <p>You can close this pop-up at any time, if you want to get this data back, click the <em>Current Scenario</em> button. Or, if
-            you would like a new scenario, close this pop-up and click <em>Random Scenario</em>.</p>
+          <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i> 
+          <em>Current </em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
           <p>A dilemma zone exists that is... (length)</p>
 
         </div>
@@ -419,8 +419,8 @@
           <p>The vehicle's tire conditions are described as <strong><span id="map-4-tireCondition"></span></strong></p>
           <p>The weather conditions are described as <strong><span id="map-4-weatherCondition"></span></strong></p>
           <p>The vehicle is <strong><span id="map-4-carLength"></span></strong> m long</p>
-          <p>You can close this pop-up at any time, if you want to get this data back, click the <em>Current Scenario</em> button. Or, if
-            you would like a new scenario, close this pop-up and click <em>Random Scenario</em>.</p>
+          <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i> 
+          <em>Current </em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
           <p>A dilemma zone exists that is... (length)</p>
 
         </div>
@@ -450,8 +450,8 @@
           <p>The vehicle's tire conditions are described as <strong><span id="map-5-tireCondition"></span></strong></p>
           <p>The weather conditions are described as <strong><span id="map-5-weatherCondition"></span></strong></p>
           <p>The vehicle is <strong><span id="map-5-carLength"></span></strong> m long</p>
-          <p>You can close this pop-up at any time, if you want to get this data back, click the <em>Current Scenario</em> button. Or, if
-            you would like a new scenario, close this pop-up and click <em>Random Scenario</em>.</p>
+         <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i> 
+          <em>Current </em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
           <p>A dilemma zone exists that is... (length)</p>
 
         </div>
