--- a/test_yourself.html
+++ b/test_yourself.html
@@ -114,7 +114,7 @@
               id="randomScenarioMapOne" 
               data-toggle="modal" 
               data-target="#map-1-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded"
               id="current-map-1" 
               data-toggle="modal" 
               data-target="#map-1-scene-1"
@@ -159,7 +159,7 @@
               id="randomScenarioMapTwo" 
               data-toggle="modal" 
               data-target="#map-2-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded"
               id="current-map-2" 
               data-toggle="modal" 
               data-target="#map-2-scene-1"
@@ -204,7 +204,7 @@
               id="randomScenarioMapThree" 
               data-toggle="modal" 
               data-target="#map-3-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded"
               id="current-map-3" 
               data-toggle="modal" 
               data-target="#map-3-scene-1"
@@ -249,7 +249,7 @@
               id="randomScenarioMapFour" 
               data-toggle="modal" 
               data-target="#map-4-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded"
               id="current-map-4" 
               data-toggle="modal" 
               data-target="#map-4-scene-1"
@@ -294,7 +294,7 @@
               id="randomScenarioMapFive" 
               data-toggle="modal" 
               data-target="#map-5-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded"
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded"
               id="current-map-5" 
               data-toggle="modal" 
               data-target="#map-5-scene-1"
