Fix padding at bottom of divs where maps are present in test_yourself.html

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -91,7 +91,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row mb--1">
       <div class="col-lg-4 content-div">
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
@@ -136,7 +136,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row mb--1">
       <div class="col-lg-4 content-div">
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
@@ -181,7 +181,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row mb--1">
       <div class="col-lg-4 content-div">
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
@@ -226,7 +226,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row mb--1">
       <div class="col-lg-4 content-div">
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
